--- a/generators/templates/package.json
+++ b/generators/templates/package.json
@@ -5,7 +5,8 @@
     "dev": "nodemon --exec \"next dev\"",
     "build": "next build",
     "start": "next start -p $PORT",
-    "heroku-postbuild": "npm run build",
+    "export": "next export",
+    "netlify:deploy": "npm run build && npm run export",
     "lint": "eslint ./**/**.js",
     "lint:fix": "eslint ./**/**.js --fix",
     "test": "jest --colors",
