--- a/generators/templates/package.json
+++ b/generators/templates/package.json
@@ -55,7 +55,8 @@
     "img-loader": "^3.0.1",
     "jest": "^25.4.0",
     "nodemon": "^2.0.3",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "react-axe": "^3.4.1"
   },
   "jest": {
     "setupFilesAfterEnv": [
